# ArxivDigest

./: .gitignore  pyproject.toml
.github/workflows/: daily_pipeline.yaml
conf/: config.yaml
src/: action.py
